unpackaged/main/default/objects/Contact/fields/Account_name_for_External_reports__c.field-meta.xml
<CustomField>
    <fullName>Account_name_for_External_reports__c</fullName>
    <label>Account name for External reports</label>
    <length>255</length>
    <type>Text</type>
</CustomField>