unpackaged/main/default/objects/Contact/fields/Address_Override__c.field-meta.xml
<CustomField>
    <fullName>Address_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, NPSP will not sync this Contact&#39;s address with the Household&#39;s current address (and vice versa).</inlineHelpText>
    <label>Address Override</label>
    <type>Checkbox</type>
</CustomField>