unpackaged/main/default/objects/Contact/fields/Advocacy_Actions_and_Petitions__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Actions_and_Petitions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>One of the options on the Donor Subscription Center. Checked by default, but if the donor unchecks &quot;Advocacy Actions and Petitions&quot; emails from AJWS will no longer be sent to this email address.</inlineHelpText>
    <label>Advocacy Actions and Petitions</label>
    <type>Checkbox</type>
</CustomField>