unpackaged/main/default/objects/Contact/fields/AJWS_Alumni__c.field-meta.xml
<CustomField>
    <fullName>AJWS_Alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <description>past participants in AJWS service programs.</description>
    <inlineHelpText>past participants in AJWS service programs.</inlineHelpText>
    <label>AJWS Alumni</label>
    <type>Checkbox</type>
</CustomField>