unpackaged/main/default/objects/Contact/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <inlineHelpText>Alert regarding grantee contact.</inlineHelpText>
    <label>Alert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>