unpackaged/main/default/objects/Contact/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <inlineHelpText>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</inlineHelpText>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>