unpackaged/main/default/objects/Contact/fields/Annual_Report_Only__c.field-meta.xml
<CustomField>
    <fullName>Annual_Report_Only__c</fullName>
    <formula>Account.Annual_Report_Only__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual Report Only box is checked on the Account this Contact belongs to.</inlineHelpText>
    <label>Annual Report Only</label>
    <type>Checkbox</type>
</CustomField>