unpackaged/main/default/objects/Contact/fields/Annual_Solicitation_Only__c.field-meta.xml
<CustomField>
    <fullName>Annual_Solicitation_Only__c</fullName>
    <description>Annual Solicitation Only box is checked on the Account this Contact belongs to.</description>
    <formula>Account.Annual_Solicitation_Only__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual Solicitation Only box is checked on the Account this Contact belongs to.</inlineHelpText>
    <label>Annual Solicitation Only</label>
    <type>Checkbox</type>
</CustomField>