unpackaged/main/default/objects/Contact/fields/Anti_Next_Gen_Override__c.field-meta.xml
<CustomField>
    <fullName>Anti_Next_Gen_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for people who qualify for Global Circle based on age who need to be manually removed from program</description>
    <inlineHelpText>Check to manually remove contacts from Global Circle even when they qualify based on age.</inlineHelpText>
    <label>Anti–Next Gen Override</label>
    <type>Checkbox</type>
</CustomField>