unpackaged/main/default/objects/Contact/fields/AntiGC_Override__c.field-meta.xml
<CustomField>
    <fullName>AntiGC_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to manually remove contacts from Global Circle even when they qualify based on age.</inlineHelpText>
    <label>Anti-GC Override</label>
    <type>Checkbox</type>
</CustomField>