unpackaged/main/default/objects/Contact/fields/Archived_Initial_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Archived_Initial_Referrer__c</fullName>
    <inlineHelpText>Field that captures first Initial referrer - Updated by Workflow rule. Part of the SB package.</inlineHelpText>
    <label>Archived Initial Referrer</label>
    <type>TextArea</type>
</CustomField>