unpackaged/main/default/objects/Contact/fields/Archived_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Archived_Referrer__c</fullName>
    <inlineHelpText>Field that captures first referrer - Updated by Workflow rule. Part of the SB package.</inlineHelpText>
    <label>Archived Referrer</label>
    <type>TextArea</type>
</CustomField>