unpackaged/main/default/objects/Contact/fields/Bad_Email__c.field-meta.xml
<CustomField>
    <fullName>Bad_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bad Email</label>
    <type>Checkbox</type>
</CustomField>