unpackaged/main/default/objects/Contact/fields/Biography__c.field-meta.xml
<CustomField>
    <fullName>Biography__c</fullName>
    <label>Biography</label>
    <type>TextArea</type>
</CustomField>