unpackaged/main/default/objects/Contact/fields/Birthdate_Verified__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Birthdate was confirmed as accurate.</inlineHelpText>
    <label>Birthdate Verified</label>
    <type>Checkbox</type>
</CustomField>