unpackaged/main/default/objects/Contact/fields/Blog__c.field-meta.xml
<CustomField>
    <fullName>Blog__c</fullName>
    <inlineHelpText>Elected Official&#39;s blog link (when available). Seems to be deprecated.</inlineHelpText>
    <label>Blog</label>
    <length>255</length>
    <type>Text</type>
</CustomField>