unpackaged/main/default/objects/Contact/fields/Born__c.field-meta.xml
<CustomField>
    <fullName>Born__c</fullName>
    <label>Born</label>
    <length>255</length>
    <type>Text</type>
</CustomField>