unpackaged/main/default/objects/Contact/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <inlineHelpText>Building within which the Elected Official has an office (when applicable). Used in KnowWho address fields.</inlineHelpText>
    <label>Building</label>
    <length>255</length>
    <type>Text</type>
</CustomField>