unpackaged/main/default/objects/Contact/fields/Chamber__c.field-meta.xml
<CustomField>
    <fullName>Chamber__c</fullName>
    <inlineHelpText>Elected Official&#39;s Chamber of the Congress (House or Senate). Part of the KnowWho Package.</inlineHelpText>
    <label>Chamber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>