unpackaged/main/default/objects/Contact/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <inlineHelpText>City within which the Elected Official has an office. Part of the KnowWho address fields on the Contact record.</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>