unpackaged/main/default/objects/Contact/fields/Clergy__c.field-meta.xml
<CustomField>
    <fullName>Clergy__c</fullName>
    <formula>IF(
OR(
ISPICKVAL(Prefix__c, &quot;Rabbanit&quot;),
ISPICKVAL(Prefix__c , &quot;Rabba&quot;),
ISPICKVAL(Prefix__c , &quot;Rabbi&quot;),
ISPICKVAL(Prefix__c , &quot;Rabbi Dr.&quot;),
ISPICKVAL(Prefix__c , &quot;Cantor&quot;),
ISPICKVAL(Prefix__c , &quot;Hazzan&quot;),
ISPICKVAL(Prefix__c , &quot;Maharat&quot;)
),
TRUE,   
if ( Clergy_Override__c = TRUE, TRUE, False)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if the Contact&#39;s salutation is set to Rabbi, Rabbi Dr., Rabbanit, Cantor, Hazzan or Maharatif, or the &quot;Clergy Override&quot; box is checked.</inlineHelpText>
    <label>Clergy</label>
    <type>Checkbox</type>
</CustomField>