unpackaged/main/default/objects/Contact/fields/Clergy_Notes__c.field-meta.xml
<CustomField>
    <fullName>Clergy_Notes__c</fullName>
    <inlineHelpText>For clergy contacts, use for notes related to their role.</inlineHelpText>
    <label>Clergy Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>