unpackaged/main/default/objects/Contact/fields/Clergy_Override__c.field-meta.xml
<CustomField>
    <fullName>Clergy_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use to manually check the Clergy checkbox.</inlineHelpText>
    <label>Clergy Override</label>
    <type>Checkbox</type>
</CustomField>