unpackaged/main/default/objects/Contact/fields/Combined_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Combined_Created_Date__c</fullName>
    <formula>IF( Date_Added__c = NULL, DATEVALUE(CreatedDate) ,Date_Added__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Most recent Double the Donation company selected for matching gifts. Please do not update this value. Your Double the Donation subscription will actively manage this field.</inlineHelpText>
    <label>Combined Created Date</label>
    <type>Date</type>
</CustomField>