unpackaged/main/default/objects/Contact/fields/Confirm_Email__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Email__c</fullName>
    <inlineHelpText>Please re-enter email address to confirm the &quot;Email&quot; entered is correct.</inlineHelpText>
    <label>Confirm Email</label>
    <type>Email</type>
</CustomField>