unpackaged/main/default/objects/Contact/fields/Consolidated_Receipt_Preference__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Receipt_Preference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consolidated Receipt Preference</label>
    <type>Checkbox</type>
</CustomField>