unpackaged/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <inlineHelpText>Automation sets this field to &quot;Email&quot; for Email Contact records. Used in search bar results to identify email contacts.</inlineHelpText>
    <label>Contact Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>