unpackaged/main/default/objects/Contact/fields/Core_Clergy__c.field-meta.xml
<CustomField>
    <fullName>Core_Clergy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Core Clergy for AJWS.</inlineHelpText>
    <label>Core Clergy</label>
    <type>Checkbox</type>
</CustomField>