unpackaged/main/default/objects/Contact/fields/Count_AJWS_BMs__c.field-meta.xml
<CustomField>
    <fullName>Count_AJWS_BMs__c</fullName>
    <label>Count AJWS BMs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>