unpackaged/main/default/objects/Contact/fields/Count_of_Emails_not_in_Comms_Send__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Emails_not_in_Comms_Send__c</fullName>
    <description>Number of Emails related to this Development Contact that do not receive AJWS sends since they are marked &quot;Opt-out&quot; and/or &quot;Undeliverable&quot; and/or &quot;non-opener&quot;. Rolled up by DLRS action named: &quot;Email Addresses Not Sent Too&quot;</description>
    <inlineHelpText>Number of Emails related to this Development Contact that do not receive AJWS sends since they are marked &quot;Opt-out&quot; and/or &quot;Undeliverable&quot; and/or &quot;non-opener&quot;. Rolled up by DLRS action named: &quot;Email Addresses Not Sent Too&quot;</inlineHelpText>
    <label>Count of Emails not in Comms&#39; Send</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>