unpackaged/main/default/objects/Contact/fields/CRM_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_Legacy_ID__c</fullName>
    <inlineHelpText>Raiser&#39;s Edge ID for records brought over from RE.</inlineHelpText>
    <label>CRM Legacy ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>