unpackaged/main/default/objects/Contact/fields/Current_Address__c.field-meta.xml
<CustomField>
    <fullName>Current_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to the address record for this Contact (i.e. the Mailing Address showing on this Contact record).</inlineHelpText>
    <label>Current Address</label>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>