unpackaged/main/default/objects/Contact/fields/Date_Added__c.field-meta.xml
<CustomField>
    <fullName>Date_Added__c</fullName>
    <inlineHelpText>Equivalent to the &quot;Created Date&quot; field for records brought over from Raiser&#39;s Edge</inlineHelpText>
    <label>Date Added</label>
    <type>Date</type>
</CustomField>