unpackaged/main/default/objects/Contact/fields/Date_of_Death_Verified__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Death_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Deceased Date has been confirmed by AJWS.</inlineHelpText>
    <label>Date of Death Verified</label>
    <type>Checkbox</type>
</CustomField>