unpackaged/main/default/objects/Contact/fields/Days_Since_Last_Action__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Action__c</fullName>
    <formula>TODAY() - Last_Action_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For Emails only: The number of days since the parent Contact last took an action using this email (i.e. since the last &quot;Action Taken&quot; record was created for this Email Contact record based on an action, such as signing a petition, they took online).</inlineHelpText>
    <label>Days Since Last Action</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>