unpackaged/main/default/objects/Contact/fields/Default_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Default_Gift_Amount__c</fullName>
    <formula>IF(Largest_Gift__c &lt; 50,&quot;50&quot;,
IF(Largest_Gift__c &lt; 75,&quot;75&quot;,
IF(Largest_Gift__c &lt; 100,&quot;100&quot;,
IF(Largest_Gift__c &lt; 125,&quot;125&quot;,
IF(Largest_Gift__c &lt; 150,&quot;150&quot;,
IF(Largest_Gift__c &lt; 175,&quot;175&quot;,
IF(Largest_Gift__c &lt; 200,&quot;200&quot;,
IF(Largest_Gift__c &lt; 225,&quot;225&quot;,
IF(Largest_Gift__c &lt; 250,&quot;250&quot;,
IF(Largest_Gift__c &lt; 300,&quot;300&quot;,
IF(Largest_Gift__c &lt; 350,&quot;350&quot;,
IF(Largest_Gift__c &lt; 400,&quot;400&quot;,
IF(Largest_Gift__c &lt; 450,&quot;450&quot;,
IF(Largest_Gift__c &lt; 500,&quot;500&quot;,
IF(Largest_Gift__c &lt; 600,&quot;600&quot;,
IF(Largest_Gift__c &lt; 700,&quot;700&quot;,
IF(Largest_Gift__c &lt; 800,&quot;800&quot;,
IF(Largest_Gift__c &lt; 900,&quot;900&quot;,
IF(Largest_Gift__c &lt; 1000,&quot;1000&quot;,
IF(Largest_Gift__c &gt;= 1000,&quot;1000&quot;,
&quot;50&quot;))))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in SpringBoard to determine amounts shown to donor on donation pages.</inlineHelpText>
    <label>Default Gift Amount</label>
    <type>Text</type>
</CustomField>