unpackaged/main/default/objects/Contact/fields/Development_Contact__c.field-meta.xml
<CustomField>
    <fullName>Development_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Contact to which this Email belongs.</inlineHelpText>
    <label>Development Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>