unpackaged/main/default/objects/Contact/fields/Device_Browser__c.field-meta.xml
<CustomField>
    <fullName>Device_Browser__c</fullName>
    <inlineHelpText>On Email Contacts: Last browser used (e.g. Chrome 59.0.3071.115). Part of the SpringBoard Package.</inlineHelpText>
    <label>Device Browser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>