unpackaged/main/default/objects/Contact/fields/Device_Name__c.field-meta.xml
<CustomField>
    <fullName>Device_Name__c</fullName>
    <inlineHelpText>On Email Contacts: The name of the device (e.g. iPhone 6) last used for an online transaction (if available). Part of the SpringBoard Package.</inlineHelpText>
    <label>Device Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>