unpackaged/main/default/objects/Contact/fields/Device_OS__c.field-meta.xml
<CustomField>
    <fullName>Device_OS__c</fullName>
    <inlineHelpText>On Email Contacts: The operating system used (e.g. Macintosh) on the device last used for an online transaction. Part of the SpringBoard Package.</inlineHelpText>
    <label>Device OS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>