unpackaged/main/default/objects/Contact/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <inlineHelpText>On Email Contacts: The Application device type (e.g. Desktop) last used for an online transaction. Part of the SpringBoard Package.</inlineHelpText>
    <label>Device Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>