unpackaged/main/default/objects/Contact/fields/Digital_Interests__c.field-meta.xml
<CustomField>
    <fullName>Digital_Interests__c</fullName>
    <inlineHelpText>For Digital team use only! For send in collaboration with Blue State.</inlineHelpText>
    <label>Digital Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Empowering Women and Girls</fullName>
            </value>
            <value>
                <fullName>Securing Free Speech and Free Elections</fullName>
            </value>
            <value>
                <fullName>Protecting the Environment and Indigenous Lands</fullName>
            </value>
            <value>
                <fullName>Responding to Disasters</fullName>
            </value>
            <value>
                <fullName>Supporting LGBTQI+ Rights and Safety</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>