unpackaged/main/default/objects/Contact/fields/District_Code__c.field-meta.xml
<CustomField>
    <fullName>District_Code__c</fullName>
    <label>District Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>