unpackaged/main/default/objects/Contact/fields/Do_Not_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Acknowledge__c</fullName>
    <formula>Account.Do_Not_Acknowledge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if the &quot;Do Not Acknowledge&quot; box on the Account/Household this Contact belongs to is checked.</inlineHelpText>
    <label>Do Not Acknowledge</label>
    <type>Checkbox</type>
</CustomField>