unpackaged/main/default/objects/Contact/fields/Do_Not_Call_Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_Email_Alert__c</fullName>
    <formula>OR ((Do_Not_Contact_Preferred_Phone__c = True), (DoNotCall  = True), (Do_Not_Contact__c   = True), (No_Email__c  = True))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please check the Contact&#39;s solicit codes and Phone Preferences as one or more of the following flags is checked: &quot;Do Not Contact&quot;, &quot;Do Not Call&quot;, &quot;Do Not Email&quot;, &quot;Do Not Contact Preferred Phone&quot;.</inlineHelpText>
    <label>Do Not Call/Email Alert</label>
    <type>Checkbox</type>
</CustomField>