unpackaged/main/default/objects/Contact/fields/Do_Not_Contact_Phone_3__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact_Phone_3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please do not call the Contact using Phone #3</inlineHelpText>
    <label>Do Not Contact Phone #3</label>
    <type>Checkbox</type>
</CustomField>