unpackaged/main/default/objects/Contact/fields/Do_Not_Contact_Phone_4__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact_Phone_4__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please do not call the Contact using Phone #4</inlineHelpText>
    <label>Do Not Contact Phone #4</label>
    <type>Checkbox</type>
</CustomField>