unpackaged/main/default/objects/Contact/fields/Do_Not_Contact_Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact_Preferred_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please do not call the Contact using their Preferred Phone.</inlineHelpText>
    <label>Do Not Contact Preferred Phone</label>
    <type>Checkbox</type>
</CustomField>