unpackaged/main/default/objects/Contact/fields/Do_Not_Mail__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please do not mail this Contact. Will be checked automatically if the &quot;Do Not Mail&quot; box is checked on the Account record (e.g. Household) the Contact belongs to.</inlineHelpText>
    <label>Do Not Mail</label>
    <type>Checkbox</type>
</CustomField>