unpackaged/main/default/objects/Contact/fields/Do_Not_Meet__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Meet__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please do not reach out to this Contact regarding scheduling a meeting. Will be checked automatically if the &quot;Do Not Meet&quot; box is checked on the Account record (e.g. Household) the Contact belongs to.</inlineHelpText>
    <label>Do Not Meet</label>
    <type>Checkbox</type>
</CustomField>