unpackaged/main/default/objects/Contact/fields/Do_Not_Solicit__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Solicit__c</fullName>
    <formula>Account.Do_Not_Solicit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if the &quot;Do Not Solicit&quot; box is checked for the Account/Household this Contact belongs to.</inlineHelpText>
    <label>Do Not Solicit</label>
    <type>Checkbox</type>
</CustomField>