unpackaged/main/default/objects/Contact/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Primary email for the Contact.</inlineHelpText>
    <label>Email</label>
    <type>Text</type>
</CustomField>