unpackaged/main/default/objects/Contact/fields/Email_Contact_Name_vs_Dev_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Contact_Name_vs_Dev_Contact_Name__c</fullName>
    <formula>(LastName + FirstName) &lt;&gt; (Development_Contact__r.LastName + Development_Contact__r.FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flags when the name on the email record (which is the name used in email sends) does not match the name the parent Development Contact name. Used in DevOps QC.</inlineHelpText>
    <label>Email Contact Name vs. Dev Contact Name</label>
    <type>Checkbox</type>
</CustomField>