unpackaged/main/default/objects/Contact/fields/Email_No_Longer_In_Use__c.field-meta.xml
<CustomField>
    <fullName>Email_No_Longer_In_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the contact doesn&#39;t use this email address any longer.</inlineHelpText>
    <label>Email No Longer In Use</label>
    <type>Checkbox</type>
</CustomField>