unpackaged/main/default/objects/Contact/fields/Email_Notes__c.field-meta.xml
<CustomField>
    <fullName>Email_Notes__c</fullName>
    <inlineHelpText>Notes regarding this email address.</inlineHelpText>
    <label>Email Notes</label>
    <type>TextArea</type>
</CustomField>