unpackaged/main/default/objects/Contact/fields/Email_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out_Date__c</fullName>
    <formula>If ( HasOptedOutOfEmail = True &amp;&amp; NOT(ISBLANK( UnsubscribeResubscribe_Date__c )),UnsubscribeResubscribe_Date__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date the Contact unsubscribed from receiving any AJWS marketing emails.</inlineHelpText>
    <label>Email Opt Out Date</label>
    <type>DateTime</type>
</CustomField>