unpackaged/main/default/objects/Contact/fields/Email_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Type__c</fullName>
    <inlineHelpText>What type of email address is this (e.g. business, personal, assistant&#39;s)</inlineHelpText>
    <label>Email Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Email</fullName>
            </value>
            <value>
                <fullName>Business Email</fullName>
            </value>
            <value>
                <fullName>Asst Email</fullName>
            </value>
            <value>
                <fullName>Alternate Email</fullName>
            </value>
            <value>
                <fullName>Former Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>