unpackaged/main/default/objects/Contact/fields/Event_Invitations__c.field-meta.xml
<CustomField>
    <fullName>Event_Invitations__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>One of the options on the Donor Subscription Center. Checked by default, but if the donor unchecks event invitations emails from AJWS will no longer be sent to this email address.</inlineHelpText>
    <label>Event Invitations</label>
    <type>Checkbox</type>
</CustomField>