unpackaged/main/default/objects/Contact/fields/EventCampaign_Participant__c.field-meta.xml
<CustomField>
    <fullName>EventCampaign_Participant__c</fullName>
    <label>Event/Campaign Participant</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>