unpackaged/main/default/objects/Contact/fields/Exclude_from_Automated_Email__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Automated_Email__c</fullName>
    <formula>Account.Exclude_from_Automated_Emails__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Excludes contact from system automated emails like application invitations.</inlineHelpText>
    <label>Exclude from Automated Email</label>
    <type>Checkbox</type>
</CustomField>