unpackaged/main/default/objects/Contact/fields/Exclude_from_Automated_Emails__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Automated_Emails__c</fullName>
    <formula>Primary_Organization_Household__r.Exclude_from_Automated_Emails__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude from Automated Emails</label>
    <type>Checkbox</type>
</CustomField>