unpackaged/main/default/objects/Contact/fields/Exclude_from_Household_Informal_Greeting__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Household_Informal_Greeting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will exclude this contact from the Household Informal Greeting created automatically by NPSP (see NPSP Settings). This is checked by default for Email Contact records so that they are not included in informal greetings.</inlineHelpText>
    <label>Exclude from Household Informal Greeting</label>
    <type>Checkbox</type>
</CustomField>