unpackaged/main/default/objects/Contact/fields/Exclude_from_Household_Name__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Household_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will exclude this contact from the Household Name created automatically by NPSP (see NPSP Settings). This is checked by default for Email Contact records so that they are not included in the Household Name.</inlineHelpText>
    <label>Exclude from Household Name</label>
    <type>Checkbox</type>
</CustomField>