unpackaged/main/default/objects/Contact/fields/Federal_District__c.field-meta.xml
<CustomField>
    <fullName>Federal_District__c</fullName>
    <inlineHelpText>The contact&#39;s federal district. Populated by Smarty Verification functionality (provided by SpringBoard/Jackson River) based on the Contact&#39;s ZIP Code.</inlineHelpText>
    <label>Federal District</label>
    <length>10</length>
    <type>Text</type>
</CustomField>