unpackaged/main/default/objects/Contact/fields/Federal_Rep__c.field-meta.xml
<CustomField>
    <fullName>Federal_Rep__c</fullName>
    <inlineHelpText>The contact&#39;s federal congress member. Populated by Smarty Verification functionality (provided by SpringBoard/Jackson River) based on the Contact&#39;s ZIP Code.</inlineHelpText>
    <label>Federal Rep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>