unpackaged/main/default/objects/Contact/fields/Federal_Rep_DC_Office__c.field-meta.xml
<CustomField>
    <fullName>Federal_Rep_DC_Office__c</fullName>
    <inlineHelpText>Phone number for the Contact&#39;s federal Congress Member&#39;s DC (Capitol Hill) office. Populated by Smarty Verification functionality ((provided by SpringBoard/Jackson River) based on the Contact&#39;s ZIP Code.</inlineHelpText>
    <label>Federal Rep DC Office</label>
    <type>Phone</type>
</CustomField>